--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.12",
     "@libsql/client": "^0.8.1",
     "drizzle-orm": "^0.32.1",
     "next": "14.2.5",
@@ -20,8 +20,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "drizzle-kit": "^0.23.1",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.5",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
