--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.12",
     "@libsql/client": "^0.8.1",
+    "crypto": "^1.0.1",
     "drizzle-orm": "^0.32.1",
     "next": "14.2.5",
     "react": "^18.3.1",
